--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
