--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
